css/main.css
@charset utf-8;

html {
  font-family: "Noto Sans KR", sans-serif;
  font-size: 14px;
}
body {
  overflow-x: hidden; /* 가로 스크롤링 생기는 것 방지 위함 */
  color: rgb(29, 29, 31);
  letter-spacing: -0.05em; /* rem은 최상단 element, 즉, html에서 정해지는 폰트 사이즈에 상대적이고 em은 현재 스타일 지정 요소에서의 상대값이다. */
  background-color: #ffffff;
}
body.before-load {
  overflow: hidden;
}
p {
  line-height: 1.6;
}
a {
  color: rgb(29, 29, 31);
  text-decoration: none;
}
.global-nav {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 10;
  width: 100%;
  height: 44px;
  padding: 0 1rem;
}
.local-nav {
  position: absolute;
  top: 45px;
  left: 0;
  z-index: 11;
  width: 100%;
  height: 52px;
  padding: 0 1rem;
  border-bottom: 1px solid #dddddd;
}
.local-nav-sticky .local-nav {
  position: fixed;
  top: 0;
  background-color: rgba(255, 255, 255, 0.1);
  backdrop-filter: saturate(180%) blur(15px);
}
.global-nav-links,
.local-nav-links {
  display: flex;
  align-items: center;
  max-width: 1000px; /* 최대 1000px, 1000px 이하에서는 화면 가득 채우게 하기 위함이다. */
  height: 100%;
  margin: 0 auto;
}
.global-nav-links {
  justify-content: space-between;
}
.product-name {
  margin-right: auto;
  font-size: 1.4rem;
  font-weight: bold;
}
.local-nav-links a:not(.product-name) {
  margin-left: 2em;
  font-size: 0.8rem;
}
.scroll-section {
  position: relative;
  padding-top: 50vh;
}
#scroll-section-0 h1 {
  position: relative;
  top: -10vh;
  z-index: 5;
  font-size: 4rem;
  text-align: center;
}
.main-message {
  display: flex;
  align-items: center;
  justify-content: center;
  top: 35vh;
  height: 3em;
  font-size: 2.5rem;
  margin-bottom: 10px;
  opacity: 0;
}
.main-message p {
  line-height: 1.2;
  text-align: center;
  font-weight: bold;
}
.main-message small {
  display: block;
  font-size: 1.2rem;
  margin-bottom: 0.5em;
}
#scroll-section-2 .main-message {
  font-size: 3.5rem;
}
.description {
  padding: 0 1rem;
  font-size: 1.2rem;
  color: #888888;
  max-width: 1000px;
  margin: 0 auto;
}
.description strong {
  float: left;
  margin-right: 0.2em;
  font-size: 3rem;
  color: rgb(29, 29, 31);
}
.desc-message {
  width: 50%;
  font-weight: bold;
  opacity: 0;
}
.pin {
  width: 1px;
  height: 100px;
  background-color: rgb(29, 29, 31);
}
#scroll-section-2 .b {
  top: 10%;
  left: 40%;
}
#scroll-section-2 .c {
  top: 15%;
  left: 45%;
}
.mid-message {
  top: 35vh;
  max-width: 1000px;
  margin: 0 auto;
  padding: 0 1rem;
  font-size: 2rem;
  color: #888;
}
.mid-message strong {
  color: rgb(29, 29, 31);
}
.canvas-caption {
  padding: 0 1rem;
  color: #888888;
  font-size: 1.2rem;
  max-width: 1000px;
  margin: -8em auto 0;
}
.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 7rem;
  background-color: #bada55;
}
.sticky-elem {
  display: none;
  position: fixed;
  left: 0;
  width: 100%;
}
#show-scene-0 #scroll-section-0 .sticky-elem,
#show-scene-1 #scroll-section-1 .sticky-elem,
#show-scene-2 #scroll-section-2 .sticky-elem,
#show-scene-3 #scroll-section-3 .sticky-elem {
  display: block;
  will-change: opacity, transform;
}
.sticky-elem-canvas {
  top: 0;
  height: 100%;
}
.sticky-elem-canvas canvas {
  position: absolute;
  top: 50%;
  left: 50%;
}
.image-blend-canvas.sticky {
  position: fixed;
  top: 0;
}
#scroll-section-3 {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.loading {
  display: flex;
  align-items: center;
  justify-content: center;
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  z-index: 100;
  background-color: #ffffff;
  opacity: 0;
  transition: 0.5s;
}
.before-load .loading {
  opacity: 1;
}
@keyframes loading-spin {
  /* 끝날 때 한바퀴 돌려준다.*/
  100% {
    transform: rotate(360deg);
  }
}
@keyframes loading-circle-ani {
  0% {
    stroke-dashoffset: 157;
  }
  75% {
    stroke-dashoffset: -147;
  }
  100% {
    stroke-dashoffset: -157;
  }
}
.loading-circle {
  width: 54px;
  height: 54px;
  animation: loading-spin 3s infinite;
}
.loading-circle circle {
  stroke: black;
  stroke-width: 4;
  /* getTotalLength()로 stroke 전체 길이를 얻어올 수 있다. */
  stroke-dasharray: 157;
  stroke-dashoffset: 0;
  fill: #ffffff;
  animation: loading-circle-ani 1s infinite;
  /* transition: 1s;*/
}
/*
.loading-circle:hover circle {
  stroke-dashoffset: -157;
}
*/
@media (min-width: 1024px) {
  #scroll-section-0 h1 {
    font-size: 9vw;
  }
  .main-message {
    font-size: 4vw;
  }
  .description {
    padding: 0;
    font-size: 2rem;
  }
  .description strong {
    font-size: 6rem;
  }
  #scroll-section-2 .main-message {
    font-size: 6vw;
  }
  .main-message small {
    font-size: 1.5vw;
  }
  .desc-message {
    width: 20%;
    font-weight: bold;
  }
  #scroll-section-2 .b {
    top: 20%;
    left: 53%;
  }
  #scroll-section-2 .c {
    left: 55%;
  }
  .mid-message {
    width: 1000px;
    padding: 0;
    font-size: 4vw;
  }
  .canvas-caption {
    padding: 0;
    font-size: 2rem;
  }
}

